# LLM-ETL-Data-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  serve.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO_RESULTS.md
examples/: customers_raw.csv  run_demo.py
frontend/: index.html
src/llm_etl/: __init__.py  api.py  batch.py  compiler.py  config.py  llm.py  runner.py  runtime_llm.py  sandbox.py
tests/: conftest.py  test_api.py  test_api_extended.py  test_batch.py  test_bedrock_integration.py  test_bedrock_retry.py  test_compiler.py  test_rules_extended.py  test_runner.py  test_runtime_llm.py
