[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-etl-data-pipeline"
version = "0.1.0"
description = "Use Bedrock LLMs as a compiler for ETL rules, not a per-row runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "fastapi>=0.110",
    "pydantic>=2.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.34"]
serve = ["uvicorn[standard]>=0.27"]
dev = ["pytest>=8.0", "httpx>=0.27", "uvicorn[standard]>=0.27", "boto3>=1.34"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
